--- a/src/gui/InventoryList.fxml
+++ b/src/gui/InventoryList.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="371.0" prefWidth="577.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16">
+<VBox prefHeight="371.0" prefWidth="577.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label prefHeight="44.0" prefWidth="189.0" text="Estoque de Produtos">
          <font>
@@ -21,7 +20,7 @@
           <Button mnemonicParsing="false" text="Adicionar Produto" />
         </items>
       </ToolBar>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView prefHeight="277.0" prefWidth="577.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Id" />
           <TableColumn prefWidth="75.0" text="Nome" />
