--- a/src/gui/InventoryList.fxml
+++ b/src/gui/InventoryList.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -13,6 +15,11 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
+      <ToolBar prefHeight="40.0" prefWidth="200.0">
+        <items>
+          <Button mnemonicParsing="false" text="Adiciona produto" />
+        </items>
+      </ToolBar>
       <TableView prefHeight="277.0" prefWidth="577.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Id" />
