--- a/src/gui/CategoryProductForm.fxml
+++ b/src/gui/CategoryProductForm.fxml
@@ -26,7 +26,7 @@
          <children>
             <Label text="ID" />
             <Label text="Nome" GridPane.rowIndex="1" />
-            <TextField fx:id="txtId" GridPane.columnIndex="1" />
+            <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label fx:id="labelErrorName" textFill="#e40a0a" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
