--- a/src/gui/InventoryList.fxml
+++ b/src/gui/InventoryList.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="371.0" prefWidth="577.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="371.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.InventoryListController">
    <children>
       <Label prefHeight="44.0" prefWidth="189.0" text="Estoque de Produtos">
          <font>
@@ -20,15 +20,17 @@
           <Button mnemonicParsing="false" text="Adiciona produto" />
         </items>
       </ToolBar>
-      <TableView prefHeight="277.0" prefWidth="577.0">
+      <TableView fx:id="tableViewProducts" prefHeight="277.0" prefWidth="606.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Id" />
-          <TableColumn prefWidth="75.0" text="Nome" />
-            <TableColumn prefWidth="75.0" text="Marca" />
-            <TableColumn prefWidth="75.0" text="Cor" />
-            <TableColumn prefWidth="75.0" text="Codigo" />
-            <TableColumn prefWidth="100.0" text="Preço de fabrica" />
-            <TableColumn prefWidth="100.0" text="Preço de venda" />
+          <TableColumn fx:id="tableColumId" prefWidth="75.0" text="Id" />
+          <TableColumn fx:id="tableColumName" prefWidth="75.0" text="Nome" />
+            <TableColumn fx:id="tableColumBrand" prefWidth="75.0" text="Marca" />
+            <TableColumn fx:id="tableColumColor" prefWidth="75.0" text="Cor" />
+            <TableColumn fx:id="tableColumNCode" prefWidth="75.0" text="Codigo" />
+            <TableColumn fx:id="tableColumFactoryPrice" prefWidth="100.0" text="Preço de fabrica" />
+            <TableColumn fx:id="tableColumSalePrice" prefWidth="100.0" text="Preço de venda" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" text="Column X" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" text="Column X" />
         </columns>
       </TableView>
    </children>
