--- a/src/gui/InventoryForm.fxml
+++ b/src/gui/InventoryForm.fxml
@@ -28,6 +28,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -36,22 +37,49 @@
             <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="txtMarca" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="txtCor" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="txtCodigo" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="txtPrecoFabrica" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="txtPrecoVenda" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <ComboBox fx:id="comboBoxCategory" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label text="Cor" GridPane.rowIndex="3" />
-            <Label fx:id="labelErrorName" textFill="#e40a0a" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <TextField fx:id="txtCor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtCodigo" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="txtPrecoFabrica" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="txtPrecoVenda" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <ComboBox fx:id="comboBoxCategory" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Label text="Cor" GridPane.rowIndex="4" />
+            <Label fx:id="labelErrorName" prefHeight="15.0" prefWidth="152.0" textFill="#e80a0a" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label text="Marca" GridPane.rowIndex="2" />
+            <Label text="Código" GridPane.rowIndex="5" />
+            <Label text="Preço de Fabrica" GridPane.rowIndex="6" />
+            <Label text="Preço de Venda" GridPane.rowIndex="7" />
+            <Label text="Categoria" GridPane.rowIndex="8" />
+            <Label fx:id="labelErrorMarca" prefHeight="17.0" prefWidth="156.0" textFill="#e80a0a" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelErrorCor" prefHeight="17.0" prefWidth="155.0" textFill="#e80a0a" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelErrorPrecoFabrica" prefHeight="17.0" prefWidth="160.0" textFill="#e80a0a" GridPane.columnIndex="2" GridPane.rowIndex="6">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelErrorCode" prefHeight="17.0" prefWidth="155.0" textFill="#dd0f0f" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font>
             </Label>
-            <Label text="Marca" GridPane.rowIndex="2" />
-            <Label text="Código" GridPane.rowIndex="4" />
-            <Label text="Preço de Fabrica" GridPane.rowIndex="5" />
-            <Label text="Preço de Venda" GridPane.rowIndex="6" />
-            <Label text="Categoria" GridPane.rowIndex="7" />
+            <Label text="Quantidade" GridPane.rowIndex="3" />
+            <TextField fx:id="txtQuantidade" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="labelErrorQuantidade" prefHeight="17.0" prefWidth="153.0" textFill="#ee0b0b" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Italic" size="10.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
       <HBox layoutX="173.0" layoutY="231.0" prefHeight="56.0" prefWidth="200.0" spacing="5.0">
