Inicio da implementação de registro de vendas

--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -22,6 +22,11 @@
                     <MenuItem fx:id="menuItemCategoryProducts" mnemonicParsing="false" onAction="#onMenuItemCategoryProducts" text="Mostra categorias de produtos" />
                   </items>
                 </Menu>
+                  <Menu mnemonicParsing="false" text="Vendas">
+                    <items>
+                      <MenuItem fx:id="menuItemSale" mnemonicParsing="false" onAction="#onMenuItemSale" text="Registro de vendas" />
+                    </items>
+                  </Menu>
               </menus>
             </MenuBar>
          </children>
