--- a/src/gui/InventoryForm.fxml
+++ b/src/gui/InventoryForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="287.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.InventoryFormController">
+<AnchorPane prefHeight="306.0" prefWidth="501.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.InventoryFormController">
    <children>
-      <GridPane layoutX="12.0" layoutY="18.0" prefHeight="213.0" prefWidth="489.0">
+      <GridPane layoutX="12.0" layoutY="18.0" prefHeight="263.0" prefWidth="512.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,9 +39,11 @@
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="txtMarca" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="txtCor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="txtCodigo" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="txtPrecoFabrica" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField fx:id="txtPrecoVenda" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="txtCodigo" prefHeight="25.0" prefWidth="139.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="txtPrecoVenda" prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <padding>
+                  <Insets left="15.0" />
+               </padding></TextField>
             <ComboBox fx:id="comboBoxCategory" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <Label text="Cor" GridPane.rowIndex="4" />
             <Label fx:id="labelErrorName" prefHeight="15.0" prefWidth="152.0" textFill="#e80a0a" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -80,13 +83,29 @@
                   <Font name="System Italic" size="10.0" />
                </font>
             </Label>
+            <Label text="R$" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="txtPrecoFabrica" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="15.0" />
+               </padding>
+            </TextField>
+            <Label text="R$" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <HBox fillHeight="false" prefHeight="74.0" prefWidth="200.0" spacing="9.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
+               <children>
+                  <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
+                  <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets top="40.0" />
+               </padding>
+            </HBox>
          </children>
       </GridPane>
-      <HBox layoutX="173.0" layoutY="231.0" prefHeight="56.0" prefWidth="200.0" spacing="5.0">
-         <children>
-            <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
-            <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
-         </children>
-      </HBox>
    </children>
 </AnchorPane>
