--- a/src/gui/SaleForm.fxml
+++ b/src/gui/SaleForm.fxml
@@ -3,10 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -14,9 +11,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="392.0" prefWidth="859.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
+<AnchorPane prefHeight="180.0" prefWidth="527.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
    <children>
-      <HBox fillHeight="false" layoutX="342.0" layoutY="306.0" prefHeight="76.0" prefWidth="120.0" spacing="9.0">
+      <HBox fillHeight="false" layoutX="204.0" layoutY="166.0" prefHeight="34.0" prefWidth="120.0" spacing="9.0">
          <children>
             <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
             <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" prefWidth="60.0" text="Cancel" />
@@ -28,7 +25,7 @@
             <Insets top="40.0" />
          </padding>
       </HBox>
-      <GridPane layoutX="12.0" layoutY="36.0" prefHeight="76.0" prefWidth="491.0">
+      <GridPane layoutX="12.0" layoutY="36.0" prefHeight="141.0" prefWidth="491.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="139.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="373.0" minWidth="10.0" prefWidth="373.0" />
@@ -36,6 +33,7 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -45,26 +43,10 @@
             <TextField fx:id="txtNameCliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="txtEnderecoEntrega" prefHeight="25.0" prefWidth="183.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Endereço de entrega" GridPane.rowIndex="2" />
+            <Button fx:id="btListProductSale" mnemonicParsing="false" onAction="#onBtListProductSale" text="Escolher produto" GridPane.rowIndex="3" />
+            <TextField fx:id="txtNomeProduto" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <TableView fx:id="tableViewProducts" layoutX="9.0" layoutY="150.0" prefHeight="186.0" prefWidth="829.0">
-         <columns>
-            <TableColumn fx:id="tableColumId" prefWidth="30.0" text="Id" />
-            <TableColumn fx:id="tableColumCatewgory" prefWidth="140.0" text="Categoria" />
-            <TableColumn fx:id="tableColumName" prefWidth="100.0" text="Nome" />
-            <TableColumn fx:id="tableColumColor" prefWidth="100.0" text="Cor" />
-            <TableColumn fx:id="tableColumQiantity" prefWidth="75.0" text="Quantidade" />
-            <TableColumn fx:id="tableColumBrand" prefWidth="100.0" text="Marca" />
-            <TableColumn fx:id="tableColumNCode" prefWidth="75.0" text="Codigo" />
-            <TableColumn fx:id="tableColumFactoryPrice" prefWidth="100.0" text="Preço de fabrica" />
-            <TableColumn fx:id="tableColumSalePrice" prefWidth="100.0" text="Preço de venda" />
-         </columns>
-      </TableView>
-      <ToolBar layoutX="12.0" layoutY="112.0" prefHeight="40.0" prefWidth="577.0">
-        <items>
-          <Button fx:id="BtNewSale" mnemonicParsing="false" onAction="#onBtListProductSale" text="Adicionar produto" />
-        </items>
-      </ToolBar>
       <Label layoutX="26.0" layoutY="6.0" prefHeight="17.0" prefWidth="146.0" text="Nova venda">
          <font>
             <Font name="System Bold" size="18.0" />
