--- a/src/gui/SaleForm.fxml
+++ b/src/gui/SaleForm.fxml
@@ -60,10 +60,6 @@
                <font>
                   <Font name="System Italic" size="12.0" />
                </font></TextField>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets right="-5.0" />
-               </GridPane.margin></TextField>
             <TextField fx:id="txtProdutoBrand" prefHeight="25.0" prefWidth="184.0" promptText="Marca do produto" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="165.0" right="100.0" />
@@ -99,5 +95,6 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <Label fx:id="labelError" layoutX="401.0" layoutY="225.0" prefHeight="17.0" prefWidth="250.0" />
    </children>
 </AnchorPane>
