--- a/src/gui/SaleForm.fxml
+++ b/src/gui/SaleForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="256.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
+<AnchorPane prefHeight="256.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
    <children>
       <HBox fillHeight="false" layoutX="204.0" layoutY="186.0" prefHeight="45.0" prefWidth="120.0" spacing="9.0">
          <children>
@@ -25,7 +26,7 @@
             <Insets top="40.0" />
          </padding>
       </HBox>
-      <GridPane layoutX="12.0" layoutY="36.0" prefHeight="141.0" prefWidth="655.0">
+      <GridPane layoutX="26.0" layoutY="45.0" prefHeight="141.0" prefWidth="509.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="139.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="373.0" minWidth="10.0" prefWidth="373.0" />
@@ -48,7 +49,10 @@
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
-            <TextField fx:id="txtDeliveryAddress" prefHeight="25.0" prefWidth="183.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtDeliveryAddress" prefHeight="25.0" prefWidth="183.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets right="-5.0" />
+               </GridPane.margin></TextField>
             <Label text="Endereço de entrega" GridPane.rowIndex="3" />
             <Button fx:id="btProductSale" mnemonicParsing="false" onAction="#CheckProductSale" text="Escolher produto" GridPane.rowIndex="4" />
             <TextField fx:id="txtProductName" prefHeight="25.0" prefWidth="134.0" promptText="Nome completo do produto" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -75,7 +79,10 @@
                </GridPane.margin>
             </TextField>
             <Label text="Telefone do cliente" GridPane.rowIndex="2" />
-            <TextField fx:id="txtCustomerPhone" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtCustomerPhone" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets right="-5.0" />
+               </GridPane.margin></TextField>
          </children>
       </GridPane>
       <Label layoutX="26.0" layoutY="6.0" prefHeight="17.0" prefWidth="146.0" text="Nova venda">
@@ -98,6 +105,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="labelError" layoutX="401.0" layoutY="225.0" prefHeight="17.0" prefWidth="250.0" />
+      <ComboBox fx:id="comboBoxTypeOfSale" layoutX="545.0" layoutY="157.0" prefHeight="25.0" prefWidth="95.0" />
    </children>
 </AnchorPane>
