--- a/src/gui/SaleForm.fxml
+++ b/src/gui/SaleForm.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,24 +14,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="256.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
+<AnchorPane prefHeight="510.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
    <children>
-      <HBox fillHeight="false" layoutX="204.0" layoutY="186.0" prefHeight="45.0" prefWidth="120.0" spacing="9.0">
+      <HBox fillHeight="false" layoutX="580.0" layoutY="463.0" prefWidth="120.0" spacing="5.0">
          <children>
             <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
-            <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" prefWidth="60.0" text="Cancel" />
+            <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
          </children>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
-         <padding>
-            <Insets top="40.0" />
-         </padding>
       </HBox>
-      <GridPane layoutX="26.0" layoutY="45.0" prefHeight="141.0" prefWidth="509.0">
+      <GridPane layoutX="6.0" layoutY="55.0" prefHeight="141.0" prefWidth="558.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="139.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="373.0" minWidth="10.0" prefWidth="373.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="128.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="435.0" minWidth="10.0" prefWidth="430.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -41,48 +40,35 @@
          <children>
             <Label text="ID" />
             <Label text="Nome do cliente" GridPane.rowIndex="1" />
-            <TextField fx:id="txtId" editable="false" prefHeight="25.0" prefWidth="376.0" GridPane.columnIndex="1">
+            <TextField fx:id="txtId" editable="false" prefHeight="25.0" prefWidth="376.0" promptText="Preenchido automaticamente" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
-            <TextField fx:id="txtClientName" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="txtClientName" promptText="Nome completo" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
-            <TextField fx:id="txtDeliveryAddress" prefHeight="25.0" prefWidth="183.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="txtDeliveryAddress" prefHeight="25.0" prefWidth="183.0" promptText="Rua,numero e bairro" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
             <Label text="Endereço de entrega" GridPane.rowIndex="3" />
-            <Button fx:id="btProductSale" mnemonicParsing="false" onAction="#CheckProductSale" text="Escolher produto" GridPane.rowIndex="4" />
-            <TextField fx:id="txtProductName" prefHeight="25.0" prefWidth="134.0" promptText="Nome completo do produto" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <TextField fx:id="txtSearchProduct" prefHeight="25.0" prefWidth="188.0" promptText="Digite nome, maraca, cor, ou referencia para procurar um produto especifico" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <GridPane.margin>
-                  <Insets right="210.0" />
+                  <Insets right="-5.0" />
                </GridPane.margin>
                <font>
                   <Font name="System Italic" size="12.0" />
                </font></TextField>
-            <TextField fx:id="txtProductBrand" prefHeight="25.0" prefWidth="184.0" promptText="Marca do produto" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="165.0" right="100.0" />
-               </GridPane.margin>
-               <font>
-                  <Font name="System Italic" size="12.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="txtProductColor" promptText="Cor do produto" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="275.0" right="-5.0" />
-               </GridPane.margin>
-            </TextField>
             <Label text="Telefone do cliente" GridPane.rowIndex="2" />
-            <TextField fx:id="txtCustomerPhone" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="txtCustomerPhone" promptText="Apenas numeros" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
+            <Label text="Procuras produto" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Label layoutX="26.0" layoutY="6.0" prefHeight="17.0" prefWidth="146.0" text="Nova venda">
@@ -90,21 +76,45 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labelProduct" layoutX="20.0" layoutY="182.0" prefHeight="27.0" prefWidth="491.0">
+      <Label layoutX="447.0" layoutY="6.0" prefHeight="27.0" prefWidth="60.0" text="Valor :">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="324.0" layoutY="6.0" prefHeight="27.0" prefWidth="60.0" text="Valor :">
+      <ComboBox fx:id="comboBoxTypeOfSale" layoutX="257.0" layoutY="7.0" prefWidth="150.0" />
+      <TableView fx:id="tableViewProducts" layoutX="6.0" layoutY="238.0" prefHeight="200.0" prefWidth="1271.0">
+         <columns>
+            <TableColumn fx:id="tableColumId" prefWidth="40.0" text="Id" />
+            <TableColumn fx:id="tableColumCategory" prefWidth="130.0" text="Categoria" />
+            <TableColumn fx:id="tableColumName" prefWidth="100.0" text="Nome" />
+            <TableColumn fx:id="tableColumColor" prefWidth="100.0" text="Cor" />
+            <TableColumn fx:id="tableColumQiantity" prefWidth="75.0" text="Quantidade" />
+            <TableColumn fx:id="tableColumBrand" prefWidth="100.0" text="Marca" />
+            <TableColumn fx:id="tableColumReference" prefWidth="75.0" text="Codigo" />
+            <TableColumn fx:id="tableColumSpotCostPrice" prefWidth="137.0" text="Preço de custo(á vista)" />
+            <TableColumn fx:id="tableColumForwardCostPrice" prefWidth="138.0" text="Preço de custo(á prazo)" />
+            <TableColumn fx:id="tableColumCashSalePrice" prefWidth="140.0" text="Preço de venda(á vista)" />
+            <TableColumn fx:id="tableColumForwardSellingPrice" minWidth="7.0" prefWidth="146.0" text="Preço de venda(á prazo)" />
+            <TableColumn fx:id="tableColumnSELL" minWidth="0.0" prefWidth="87.0" />
+         </columns>
+      </TableView>
+      <Label fx:id="labelProduct" layoutX="580.0" layoutY="55.0" prefHeight="40.0" prefWidth="672.0">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
-      <Label fx:id="labelSaleTotal" layoutX="382.0" layoutY="11.0" prefHeight="20.0" prefWidth="66.0">
+      <Label fx:id="labelSaleTotal" layoutX="537.0" layoutY="2.0" prefHeight="35.0" prefWidth="93.0">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <ComboBox fx:id="comboBoxTypeOfSale" layoutX="545.0" layoutY="157.0" prefHeight="25.0" prefWidth="95.0" />
+      <Button fx:id="btnSearchProduct" layoutX="583.0" layoutY="169.0" mnemonicParsing="false" onAction="#SearchProducts" prefHeight="27.0" prefWidth="61.0" text="Procurar" />
+      <Button fx:id="btnShowAll" layoutX="6.0" layoutY="206.0" mnemonicParsing="false" onAction="#ShowAll" text="Mostrar todos os produtos" />
+      <Button fx:id="UpdateLabelTotalSale" layoutX="407.0" layoutY="7.0" mnemonicParsing="false" onAction="#UpdateLabelTotalSale" text="Ok" />
+      <Label layoutX="507.0" layoutY="2.0" text="R$">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
